# chatapp

./: cliff.toml  deny.toml  package-lock.json  package.json
.github/workflows/: build.yml
src/: main.js  utils.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/assets/: styles.css
src/components/: MessageList.vue  MessageSend.vue  Sidebar.vue
src/store/: index.js
src/views/: Login.vue  Register.vue
